# gtk-nirvana

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  gtk-nirvana.desktop  libtool
pixmaps/: Makefile.am  Makefile.in
po/: Makefile.in
src/: Makefile.am  Makefile.in  main.c
src/.deps/: main.Po
